Repair of workflows

--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -6,15 +6,15 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: mkdir "/Seweryn_Woliński-$GITHUB_REF_NAME"
-      - run: cp /src "/Seweryn_Woliński-$GITHUB_REF_NAME/php"
-      - run: cp /db "/Seweryn_Woliński-$GITHUB_REF_NAME/db"
+      - run: mkdir "Seweryn_Woliński-$GITHUB_REF_NAME"
+      - run: cp /src "Seweryn_Woliński-$GITHUB_REF_NAME/php"
+      - run: cp /db "Seweryn_Woliński-$GITHUB_REF_NAME/db"
       - uses: vimtor/action-zip@v1
         with:
-          files: "/Sewryn_Woliński-$GITHUB_REF_NAME"
+          files: "Sewryn_Woliński-$GITHUB_REF_NAME"
           recursive: false
-          dest: "/Sewryn_Woliński-$GITHUB_REF_NAME.zip"
+          dest: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: "/Sewryn_Woliński-$GITHUB_REF_NAME.zip"
+          files: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
