--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -7,8 +7,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - run: mkdir "Seweryn_Woliński-$GITHUB_REF_NAME"
-      - run: cp /src "Seweryn_Woliński-$GITHUB_REF_NAME/php"
-      - run: cp /db "Seweryn_Woliński-$GITHUB_REF_NAME/db"
+      - run: cp ./src "Seweryn_Woliński-$GITHUB_REF_NAME/php"
+      - run: cp ./db "Seweryn_Woliński-$GITHUB_REF_NAME/db"
       - uses: vimtor/action-zip@v1
         with:
           files: "Sewryn_Woliński-$GITHUB_REF_NAME"
