Final version of workflow

--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -1,5 +1,8 @@
 name: GitHub Actions Demo
-on: [push]
+on:
+  push:
+    tags:
+      - "v*.*.*"
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -16,5 +19,6 @@ jobs:
           dest: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
