--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -1,10 +1,10 @@
 name: GitHub Actions Demo
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches:
+      - main
 jobs:
-  Explore-GitHub-Actions:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -18,7 +18,9 @@ jobs:
           recursive: false
           dest: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
       - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: marvinpinto/action-automatic-releases@latest
         with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          automatic_release_tag: latest
+          title: New version
           files: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
