--- a/.github/workflows/create-package.yml
+++ b/.github/workflows/create-package.yml
@@ -1,26 +1,26 @@
 name: GitHub Actions Demo
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "v*.*"
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: mkdir "Seweryn_Woliński-$GITHUB_REF_NAME"
-      - run: cp ./src "Seweryn_Woliński-$GITHUB_REF_NAME/php" -r
-      - run: cp ./db "Seweryn_Woliński-$GITHUB_REF_NAME/db" -r
+      - name: Set filename
+        run: echo "FILENAME=Woliński_4a_${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - run: mkdir $FILENAME
+      - run: cp ./src "${{env.FILENAME}}/php" -r
+      - run: cp ./db "${{env.FILENAME}}/db" -r
       - uses: vimtor/action-zip@v1
         with:
-          files: "Sewryn_Woliński-$GITHUB_REF_NAME"
+          files: "${{env.FILENAME}}"
           recursive: false
-          dest: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
+          dest: "${{env.FILENAME}}.zip"
       - name: Release
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          automatic_release_tag: latest
-          title: New version
-          files: "Sewryn_Woliński-$GITHUB_REF_NAME.zip"
+          files: "${{env.FILENAME}}.zip"
