--- a/.devcontainer/php.ini
+++ b/.devcontainer/php.ini
@@ -1,1 +1,27 @@
 extension=mysqli
+
+
+engine=On
+short_open_tag=Off
+precision=14
+output_buffering=4096
+implicit_flush=Off
+unserialize_callback_func=
+serialize_precision=-1
+disable_functions=
+disable_classes=
+zend.enable_gc=On
+expose_php=On
+max_execution_time=30
+max_input_time=60
+memory_limit=128M
+error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
+display_errors=On
+display_startup_errors=On
+log_errors=On
+log_errors_max_len=1024
+ignore_repeated_errors=Off
+ignore_repeated_source=Off
+report_memleaks=On
+html_errors=On
+variables_order="GPCS"
